--- a/index.html
+++ b/index.html
@@ -6,174 +6,31 @@
     <title>Encoding Report</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* ===== ROOT VARIABLES ===== */
-        :root {
-            --primary-color: #1538a4;
-            --secondary-color: #33a2ff;
-            --text-color: #2c3e50;
-            --border-color: #e2e8f0;
-            --bg-light: #f8fafc;
-            --radius-sm: 6px;
-            --radius-md: 8px;
-            --radius-lg: 10px;
-            --spacing-xs: 4px;
-            --spacing-sm: 8px;
-            --spacing-md: 12px;
-            --spacing-lg: 16px;
-        }
-
-        /* ===== RESET & BASE STYLES ===== */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            background: var(--bg-light);
-            font-family: 'Segoe UI', sans-serif;
-            line-height: 1.4;
-            color: var(--text-color);
+            background-color: #1a1a1a;
+            color: #ffffff;
         }
-
-        /* ===== LAYOUT & CONTAINERS ===== */
-        .container {
-            max-width: 1200px;
-            margin: var(--spacing-md) auto;
-            padding: var(--spacing-md);
-            background: #fff;
-            border-radius: var(--radius-lg);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        .divider {
+            border-top: 1px solid #ffffff;
+            margin: 20px 0;
         }
-
-        /* ===== HEADER ===== */
+        .hidden-section {
+            display: none;
+        }
         .header {
-            background: linear-gradient(135deg, var(--primary-color) 0%, #1e4fdb 100%);
-            color: #fff;
-            padding: var(--spacing-md);
-            border-radius: var(--radius-md);
-            margin-bottom: var(--spacing-lg);
+            background-color: #1538a4;
+            padding: 20px;
+            color: white;
             text-align: center;
+            border-radius: 8px;
+            margin-bottom: 20px;
         }
-
-        .header h1 {
-            font-size: 24px;
-            font-weight: 600;
-        }
-
-        /* ===== FORM ELEMENTS ===== */
-        .form-group {
-            margin-bottom: var(--spacing-sm);
-        }
-
-        label {
-            display: block;
-            font-weight: 500;
-            margin-bottom: var(--spacing-xs);
-            color: var(--text-color);
-        }
-
-        .form-control {
-            width: 100%;
-            padding: 6px var(--spacing-sm);
-            border: 2px solid var(--border-color);
-            border-radius: var(--radius-sm);
-            transition: all 0.2s ease;
-            height: 32px;
-        }
-
-        .form-control:focus {
-            border-color: var(--primary-color);
-            outline: none;
-            box-shadow: 0 0 0 3px rgba(21, 56, 164, 0.1);
-        }
-
-        /* ===== SECTION TITLES ===== */
-        .section-title {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(135deg, var(--secondary-color) 0%, var(--primary-color) 100%);
-            color: #fff;
-            padding: var(--spacing-sm) var(--spacing-md);
-            border-radius: var(--radius-md);
-            margin: var(--spacing-md) 0 var(--spacing-sm);
-            font-size: 16px;
-            font-weight: 600;
-        }
-
-        /* ===== BUTTONS ===== */
-        .btn {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            padding: 6px var(--spacing-md);
-            border-radius: var(--radius-sm);
-            border: none;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-
-        .btn-primary {
-            background: linear-gradient(135deg, var(--primary-color) 0%, #1e4fdb 100%);
-            color: #fff;
-        }
-
-        .btn-danger {
-            background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);
-            color: #fff;
-        }
-
-        .btn-sm {
-            padding: 4px var(--spacing-sm);
-            font-size: 12px;
-        }
-
-        /* ===== PRINT STYLES ===== */
-        @media print {
- body {
-                background-color: white;
-                padding: 0;
-            }
-
-            .header {
-                background: linear-gradient(135deg, #1538a4 0%, #1e4fdb 100%) !important;
-                -webkit-print-color-adjust: exact !important;
-                print-color-adjust: exact !important;
-                color: white !important;
-            }
-
-            .no-print {
-                display: none;
-            }
-
-            .section {
-                break-inside: avoid;
-                box-shadow: none;
-                border: 1px solid #eee;
-                margin-bottom: 20px;
-            }
-
-            .section-title {
-                background: linear-gradient(135deg, #1538a4 0%, #1e4fdb 100%) !important;
-                -webkit-print-color-adjust: exact;
-                print-color-adjust: exact;
-            }
-
-            .table {
-                border: 1px solid #dee2e6;
-            }
-
-            .table th {
-                background-color: #f8f9fa !important;
-                -webkit-print-color-adjust: exact;
-                print-color-adjust: exact;
-            }
+        .btn-custom {
+            background-color: #33a2ff;
+            color: white;
         }
     </style>
 </head>
-
 <body>
     <div class="container">
         <div class="header">
@@ -188,7 +45,7 @@
                 </div>
                 <div class="form-group col-md-6">
                     <label for="shift">Shift:</label>
-                    <select id="shift" class="form-select">
+                    <select id="shift" class="form-control">
                         <option value="Day">Day</option>
                         <option value="Night">Night</option>
                     </select>
@@ -197,108 +54,116 @@
 
             <div class="divider"></div>
 
-            <label for="mrNo">Patient MRNo.:</label>
-            <input type="text" id="mrNo" class="form-control mb-3">
-
-            <div class="divider"></div>
-
-            <h2>Prescription Issues</h2>
-            <button type="button" class="btn btn-custom mb-3" onclick="togglePrescriptionSection()">(+ Prescription Issue)</button>
-
-            <div id="prescriptionIssuesContainer" class="hidden-section">
-                <div class="prescription-entry mb-4">
-                    <label for="prescriptionIssue">Prescription Issue:</label>
-                    <input type="text" class="form-control prescriptionIssue" placeholder="Enter drug name and dose"><br>
-
-                    <label for="physician">Physician:</label>
-                    <input type="text" class="form-control physician" placeholder="Enter physician name"><br>
-
-                    <label>Issue related:</label><br>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Code"> 
-                        <label class="form-check-label">Code</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Qty"> 
-                        <label class="form-check-label">Qty</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Dose"> 
-                        <label class="form-check-label">Dose</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Both"> 
-                        <label class="form-check-label">Both</label>
-                    </div><br><br>
-
-                    <label>Solution:</label>
-                    <select class="form-select solution">
-                        <option value="Changed code">Changed code</option>
-                        <option value="Changed Qty">Changed Qty</option>
-                        <option value="Changed Dose">Changed Dose</option>
-                        <option value="Both">Both</option>
-                        <option value="Cancelled">Cancelled</option>
-                    </select><br><br>
-                </div>
+            <div class="form-group">
+                <label for="mrNo">Patient MRNo.:</label>
+                <input type="text" id="mrNo" class="form-control mb-3">
             </div>
 
             <div class="divider"></div>
 
-            <label>No. of Cancelled Orders:</label>
-            <input type="number" id="cancelledOrders" class="form-control mb-3">
+            <h4>Prescription Issues</h4>
+            <button type="button" class="btn btn-custom mb-3" onclick="addPrescriptionIssue()">+ Prescription Issue</button>
 
-            <label>Not Available Qty Medications:</label>
-            <input type="text" id="notAvailableMedications" class="form-control mb-3" placeholder="Enter medications name">
+            <div id="prescriptionIssuesContainer"></div>
 
-            <label>Not Available Qty Consumables:</label>
-            <input type="text" id="notAvailableConsumables" class="form-control mb-3" placeholder="Enter consumables name">
+            <div class="divider"></div>
 
- <div class="divider"></div>
+            <div class="form-group">
+                <label for="cancelledOrders">No. of Cancelled Orders:</label>
+                <input type="number" id="cancelledOrders" class="form-control mb-3">
+            </div>
 
-            <label>Updates:</label>
-            <textarea id="updates" class="form-control" rows="3"></textarea><br>
+            <div class="form-group">
+                <label for="notAvailableMedications">Not Available Qty Medications:</label>
+                <input type="text" id="notAvailableMedications" class="form-control mb-3">
+            </div>
 
-            <button type="button" class="btn btn-custom" onclick="generatePDF()">Submit</button>
+            <div class="form-group">
+                <label for="notAvailableConsumables">Not Available Qty Consumables:</label>
+                <input type="text" id="notAvailableConsumables" class="form-control mb-3">
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="form-group">
+                <label for="updates">Updates:</label>
+                <textarea id="updates" class="form-control" rows="3"></textarea>
+            </div>
+
+            <button type="button" class="btn btn-primary" onclick="generatePDF()">Submit</button>
         </form>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script>
-        // Display today's date
         document.getElementById('date').value = new Date().toLocaleDateString();
 
-        // Toggle visibility of the prescription issues section
-        function togglePrescriptionSection() {
+        function addPrescriptionIssue() {
             const container = document.getElementById('prescriptionIssuesContainer');
-            container.classList.toggle('hidden-section');
+            
+            // Create a new Prescription Issue entry
+            const prescriptionEntry = document.createElement('div');
+            prescriptionEntry.classList.add('prescription-entry', 'mb-4', 'p-3', 'bg-dark', 'border', 'border-white', 'rounded');
+
+            prescriptionEntry.innerHTML = `
+                <label for="prescriptionIssue">Prescription Issue:</label>
+                <input type="text" class="form-control prescriptionIssue mb-2" placeholder="Enter drug name and dose">
+
+                <label for="physician">Physician:</label>
+                <input type="text" class="form-control physician mb-2" placeholder="Enter physician name">
+
+                <label>Issue related:</label><br>
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Code"> 
+                    <label class="form-check-label">Code</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Qty"> 
+                    <label class="form-check-label">Qty</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Dose"> 
+                    <label class="form-check-label">Dose</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Both"> 
+                    <label class="form-check-label">Both</label>
+                </div><br><br>
+
+                <label>Solution:</label>
+                <select class="form-control solution mb-2">
+                    <option value="Changed code">Changed code</option>
+                    <option value="Changed Qty">Changed Qty</option>
+                    <option value="Changed Dose">Changed Dose</option>
+                    <option value="Both">Both</option>
+                    <option value="Cancelled">Cancelled</option>
+                </select>
+            `;
+
+            // Append to the container
+            container.appendChild(prescriptionEntry);
         }
 
         function generatePDF() {
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
 
-            // Collect data from form
             const shift = document.getElementById('shift').value;
             const mrNo = document.getElementById('mrNo').value;
 
-            // Add data to PDF
             doc.text("Encoding Report", 10, 10);
             doc.text(`Date: ${new Date().toLocaleDateString()}`, 10, 20);
             doc.text(`Shift: ${shift}`, 10, 30);
             doc.text(`Patient MRNo.: ${mrNo}`, 10, 40);
 
-            // Loop through Prescription Issues
             let yOffset = 50;
             document.querySelectorAll('.prescription-entry').forEach((entry, index) => {
                 const prescriptionIssue = entry.querySelector('.prescriptionIssue').value;
                 const physician = entry.querySelector('.physician').value;
-
-                // Collect checkbox values for issue related
                 const issueRelated = Array.from(entry.querySelectorAll('.issueRelated:checked'))
                     .map(checkbox => checkbox.value).join(', ');
-
                 const solution = entry.querySelector('.solution').value;
 
-                // Add to PDF
                 doc.text(`Prescription Issue #${index + 1}: ${prescriptionIssue}`, 10, yOffset);
                 doc.text(`Physician: ${physician}`, 10, yOffset + 10);
                 doc.text(`Issue Related: ${issueRelated}`, 10, yOffset + 20);
@@ -306,7 +171,6 @@
                 yOffset += 40;
             });
 
-            // Remaining fields
             const cancelledOrders = document.getElementById('cancelledOrders').value;
             const notAvailableMedications = document.getElementById('notAvailableMedications').value;
             const notAvailableConsumables = document.getElementById('notAvailableConsumables').value;
@@ -317,7 +181,6 @@
             doc.text(`Not Available Qty Consumables: ${notAvailableConsumables}`, 10, yOffset + 20);
             doc.text(`Updates: ${updates}`, 10, yOffset + 30);
 
-            // Save PDF
             doc.save('Encoding_Report.pdf');
         }
     </script>
