--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Encoding Report</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /* Styling for the form */
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -34,6 +35,7 @@
             margin-bottom: 15px;
         }
     </style>
+    <!-- Import html2pdf.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 </head>
 
@@ -57,9 +59,11 @@
             </div>
 
             <h2>Prescription Issues</h2>
-            <div id="prescriptionIssuesContainer"></div>
             <button type="button" class="btn btn-primary mb-3" onclick="addPrescriptionIssue()">+ Prescription Issue</button>
-
+            
+            <!-- Container for dynamic Prescription Issue entries -->
+            <div id="prescriptionIssuesContainer"></div>
+            
             <div class="form-group">
                 <label for="cancelledOrders">No. of Cancelled Orders:</label>
                 <input type="number" id="cancelledOrders" class="form-control">
@@ -91,53 +95,48 @@
             const div = document.createElement('div');
             div.classList.add('prescription-entry', 'mb-4');
             div.innerHTML = `
-                <div class="form-group">
-                    <label for="mrNo">Patient MRNo.:</label>
-                    <input type="text" class="form-control" placeholder="Enter MRNo.">
+                <label for="mrNo">Patient MRNo.:</label>
+                <input type="text" class="form-control" placeholder="Enter MRNo."><br>
+
+                <label>Prescription Issue:</label>
+                <input type="text" class="form-control prescriptionIssue" placeholder="Enter drug name and dose"><br>
+
+                <label>Physician:</label>
+                <input type="text" class="form-control physician" placeholder="Enter physician name"><br>
+
+                <label>Issue related:</label><br>
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Code"> 
+                    <label class="form-check-label">Code</label>
                 </div>
-                <div class="form-group">
-                    <label>Prescription Issue:</label>
-                    <input type="text" class="form-control prescriptionIssue" placeholder="Enter drug name and dose">
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Qty"> 
+                    <label class="form-check-label">Qty</label>
                 </div>
-                <div class="form-group">
-                    <label>Physician:</label>
-                    <input type="text" class="form-control physician" placeholder="Enter physician name">
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Dose"> 
+                    <label class="form-check-label">Dose</label>
                 </div>
-                <div class="form-group">
-                    <label>Issue related:</label><br>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Code"> 
-                        <label class="form-check-label">Code</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Qty"> 
-                        <label class="form-check-label">Qty</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Dose"> 
-                        <label class="form-check-label">Dose</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input type="checkbox" class="form-check-input issueRelated" value="Both"> 
-                        <label class="form-check-label">Both</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label>Solution:</label>
-                    <select class="form-control solution">
-                        <option value="Changed code">Changed code</option>
-                        <option value="Changed Qty">Changed Qty</option>
-                        <option value="Changed Dose">Changed Dose</option>
-                        <option value="Both">Both</option>
-                        <option value="Cancelled">Cancelled</option>
-                    </select>
-                </div>
+                <div class="form-check form-check-inline">
+                    <input type="checkbox" class="form-check-input issueRelated" value="Both"> 
+                    <label class="form-check-label">Both</label>
+                </div><br><br>
+
+                <label>Solution:</label>
+                <select class="form-control solution">
+                    <option value="Changed code">Changed code</option>
+                    <option value="Changed Qty">Changed Qty</option>
+                    <option value="Changed Dose">Changed Dose</option>
+                    <option value="Both">Both</option>
+                    <option value="Cancelled">Cancelled</option>
+                </select><br>
             `;
             container.appendChild(div);
         }
 
         // Function to generate PDF
         function generatePDF() {
+            // Use html2pdf to capture the content in reportContent div
             const element = document.getElementById('reportContent');
             const options = {
                 margin: 1,
@@ -146,6 +145,8 @@
                 html2canvas: { scale: 2 },
                 jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
             };
+
+            // Generate PDF
             html2pdf().set(options).from(element).save();
         }
     </script>
