--- a/index.html
+++ b/index.html
@@ -201,7 +201,12 @@ body {
                     <option value="Changed Dose">Changed Dose</option>
                     <option value="Both">Both</option>
                     <option value="Cancelled">Cancelled</option>
-                </select><br>
+                </select>
+                  <div class="mb-4">
+                <!-- Solid divider -->
+                <hr class="solid">
+            </div>
+                <br>
             `;
             container.appendChild(div);
         }
