--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@ body {
             const div = document.createElement('div');
             div.classList.add('prescription-entry', 'mb-4');
             div.innerHTML = `
+
+              <div class="mb-4">
+                <!-- Solid divider -->
+                <hr class="solid">
+            </div>
+            
                 <label for="mrNo">Patient MRNo.:</label>
                 <input type="text" class="form-control" placeholder="Enter MRNo."><br>
 
