--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ body {
                 filename: 'encoding_report.pdf',
                 image: { type: 'jpeg', quality: 0.98 },
                 html2canvas: { scale: 2 },
-                jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
+                jsPDF: { unit: 'in', format: 'A4', orientation: 'portrait' }
             };
 
             // Generate PDF
