--- a/index.html
+++ b/index.html
@@ -145,10 +145,15 @@ body {
                 <label for="notAvailableConsumables">Not Available Qty Consumables:</label>
                 <input type="text" id="notAvailableConsumables" class="form-control">
             </div>
+               <div class="form-group">
+                <label for="issues">Issues:</label>
+                <textarea id="issues" class="form-control" rows="3"></textarea>
+            </div>
             <div class="form-group">
                 <label for="updates">Updates:</label>
                 <textarea id="updates" class="form-control" rows="3"></textarea>
             </div>
+            
             <div class="mb-4">
                 <!-- Solid divider -->
                 <hr class="solid">
@@ -206,6 +211,7 @@ body {
                     <option value="Changed Qty">Changed Qty</option>
                     <option value="Changed Dose">Changed Dose</option>
                     <option value="Both">Both</option>
+                      <option value="Both">Still not Fixed</option>
                     <option value="Cancelled">Cancelled</option>
                 </select>
                
