--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@ body {
                 <label for="notAvailableConsumables">Not Available Qty Consumables:</label>
                 <input type="text" id="notAvailableConsumables" class="form-control">
             </div>
+                     <div class="mb-4">
+                <!-- Solid divider -->
+                <hr class="solid">
+            </div>
                <div class="form-group">
                 <label for="issues">Issues:</label>
                 <textarea id="issues" class="form-control" rows="3"></textarea>
