--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@ body {
 
               <div class="mb-4">
                 <!-- Solid divider -->
-                <hr class="solid">
+                        <hr data-content="AND" class="hr-text">
+
             </div>
             
                 <label for="mrNo">Patient MRNo.:</label>
