--- a/index.html
+++ b/index.html
@@ -133,10 +133,9 @@ body {
                 <!-- Solid divider -->
                 <hr class="solid">
             </div>
-            <div class="form-group">
-                <label for="cancelledOrders">No. of Cancelled Orders:</label>
-                <input type="number" id="cancelledOrders" class="form-control">
-            </div>
+           
+            <h2>Quantity Availability</h2>
+
             <div class="form-group">
                 <label for="notAvailableMedications">Not Available Qty Medications:</label>
                 <input type="text" id="notAvailableMedications" class="form-control">
