--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@ body {
                 <!-- Solid divider -->
                 <hr class="solid">
             </div>
+                <div class="form-group">
+                <label for="issues">Issues:</label>
+                <textarea id="issues" class="form-control" rows="3"></textarea>
+            </div>
+            
+            <div class="mb-4">
+                <!-- Solid divider -->
+                <hr class="solid">
+            </div>
             <button type="button" class="btn btn-primary" onclick="generatePDF()">Submit</button>
         </form>
     </div>
