--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentation Master</title>
     <style>
@@ -37,7 +37,9 @@
             recognition = new SpeechRecognition();
             recognition.continuous = true;
             recognition.interimResults = false;
-            recognition.lang = 'en-US';
+
+            // Attempt to use a language that can detect multiple languages if possible.
+            recognition.lang = 'en-US'; // Fallback to English but adjust as needed
 
             recognition.onresult = (event) => {
                 const timestamp = new Date().toLocaleString();
