--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>Documentation Master</h1>
+    <h1>Documentation Master 3</h1>
     <button id="start-btn">Start Recording</button>
     <button id="stop-btn" disabled>Stop Recording</button>
     <div id="recordings"></div>
